--- a/labs/index.html
+++ b/labs/index.html
@@ -101,7 +101,7 @@
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs20/">Lab 20 – Detección de firewalls y técnicas de evasión</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs21/">Lab 21 – Fingerprinting de firewalls y detección de reglas activas</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs22/">Lab 22 – Detección de sistemas de prevención de intrusos (IPS) y evasión básica</a></li>
-        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs23/">Lab 03 – Enumeración de subdominios y DNS con herramientas OSINT</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs23/">Lab 23 – Bypass de WAF y evasión avanzada en aplicaciones web</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs24/">Lab 04 – Fingerprinting de aplicaciones web con WhatWeb y Wappalyzer</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs25/">Lab 05 – Análisis de cabeceras de correo electrónico</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs26/">Lab 06 – Análisis de metadatos en documentos y archivos</a></li>
