--- a/labs/index.html
+++ b/labs/index.html
@@ -102,7 +102,7 @@
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs21/">Lab 21 – Fingerprinting de firewalls y detección de reglas activas</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs22/">Lab 22 – Detección de sistemas de prevención de intrusos (IPS) y evasión básica</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs23/">Lab 23 – Bypass de WAF y evasión avanzada en aplicaciones web</a></li>
-        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs24/">Lab 04 – Fingerprinting de aplicaciones web con WhatWeb y Wappalyzer</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs24/">Lab 24 – Evasión de antivirus mediante ofuscación de payloads y técnicas de empaquetado</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs25/">Lab 05 – Análisis de cabeceras de correo electrónico</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs26/">Lab 06 – Análisis de metadatos en documentos y archivos</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs27/">Lab 07 – Análisis de tráfico capturado (PCAP) y reconstrucción de sesiones</a></li>
