--- a/labs/index.html
+++ b/labs/index.html
@@ -103,7 +103,7 @@
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs22/">Lab 22 – Detección de sistemas de prevención de intrusos (IPS) y evasión básica</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs23/">Lab 23 – Bypass de WAF y evasión avanzada en aplicaciones web</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs24/">Lab 24 – Evasión de antivirus mediante ofuscación de payloads y técnicas de empaquetado</a></li>
-        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs25/">Lab 05 – Análisis de cabeceras de correo electrónico</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs25/">Lab 25 – Evasión de EDR mediante técnicas de inyección y ejecución indirecta</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs26/">Lab 06 – Análisis de metadatos en documentos y archivos</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs27/">Lab 07 – Análisis de tráfico capturado (PCAP) y reconstrucción de sesiones</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs28/">Lab 08 – Reconstrucción avanzada de sesiones y extracción de artefactos</a></li>
