--- a/index.html
+++ b/index.html
@@ -4,82 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>El Pergamino Digital – Portada</title>
+  <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="/el-pergamino-digital/assets/favicon.png" type="image/png" />
-  <style>
-    :root {
-      --color-fondo: #f4f4f4;
-      --color-principal: #222;
-      --color-secundario: #0066cc;
-      --color-texto: #333;
-      --color-blanco: #fff;
-    }
-
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: var(--color-fondo);
-      color: var(--color-texto);
-    }
-
-    header {
-      background-color: var(--color-principal);
-      color: var(--color-blanco);
-      padding: 2rem 1rem;
-      text-align: center;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 2.8rem;
-    }
-
-    header p {
-      margin-top: 0.5rem;
-      font-size: 1.2rem;
-      font-weight: 300;
-    }
-
-    main {
-      max-width: 960px;
-      margin: auto;
-      padding: 2rem 1rem;
-    }
-
-    section {
-      background-color: var(--color-blanco);
-      padding: 1.5rem;
-      margin-bottom: 1.5rem;
-      border-left: 5px solid var(--color-principal);
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
-    }
-
-    section h2 {
-      margin-top: 0;
-      color: var(--color-principal);
-    }
-
-    a {
-      color: var(--color-secundario);
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    footer {
-      background-color: var(--color-principal);
-      color: #ccc;
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-    }
-
-    footer a {
-      color: #fff;
-      text-decoration: underline;
-    }
-  </style>
 </head>
 <body>
   <header>
@@ -110,9 +36,6 @@
     Este proyecto forma parte de <a href="https://pergamino-digital-ciberseguridad.blogspot.com/?m=1" target="_blank">El Pergamino Digital</a>
   </footer>
 
-  <script>
-    // Placeholder para futuras funciones JS
-    console.log("Portada cargada correctamente – El Pergamino Digital");
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
