--- a/index.html
+++ b/index.html
@@ -3,32 +3,94 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>El Pergamino Digital</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>El Pergamino Digital – Portada oficial</title>
   <link rel="icon" href="/el-pergamino-digital/assets/favicon.png" type="image/png" />
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 0;
+      color: #333;
+    }
+    header {
+      background-color: #222;
+      color: #fff;
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+    header p {
+      font-size: 1.2rem;
+      margin-top: 0.5rem;
+    }
+    main {
+      padding: 2rem 1rem;
+      max-width: 960px;
+      margin: auto;
+    }
+    section {
+      background-color: #fff;
+      padding: 1.5rem;
+      margin-bottom: 1.5rem;
+      border-left: 5px solid #444;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    section h2 {
+      margin-top: 0;
+      color: #222;
+    }
+    a {
+      color: #0066cc;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      background-color: #222;
+      color: #ccc;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+    }
+  </style>
 </head>
 <body>
   <header>
     <h1>El Pergamino Digital</h1>
-    <p>Legado técnico, editorial y certificador en ciberseguridad</p>
+    <p>Laboratorios técnicos, legado editorial y formación certificadora en ciberseguridad</p>
   </header>
 
   <main>
     <section>
-      <h2>📘 Índice de laboratorios</h2>
-      <p><a href="/el-pergamino-digital/labs/index.html">Acceder al índice completo</a></p>
+      <h2>📘 Acceso a los laboratorios</h2>
+      <p>Explora la serie completa de laboratorios técnicos, organizados por módulos y alineados con estándares internacionales.</p>
+      <p><a href="/el-pergamino-digital/labs/index.html">Ir al índice de laboratorios</a></p>
     </section>
 
     <section>
-      <h2>🔗 Repositorio en GitHub</h2>
-      <p><a href="https://github.com/JulioCesarAbreuP/el-pergamino-digital" target="_blank">Ver código fuente del proyecto</a></p>
+      <h2>🧭 Proyecto y filosofía</h2>
+      <p><strong>El Pergamino Digital</strong> es un ecosistema formativo modular, técnico y certificador, diseñado para consolidar un legado pedagógico en ciberseguridad. Cada entrega integra criterios de dominio, validación cruzada y trazabilidad editorial.</p>
+    </section>
+
+    <section>
+      <h2>🔗 Repositorio oficial</h2>
+      <p>Consulta el código fuente, estructura de carpetas y evolución del proyecto en GitHub:</p>
+      <p><a href="https://github.com/JulioCesarAbreuP/el-pergamino-digital" target="_blank">Repositorio en GitHub</a></p>
     </section>
   </main>
 
   <footer>
-    Este proyecto forma parte de <a href="https://pergamino-digital-ciberseguridad.blogspot.com/?m=1" target="_blank">El Pergamino Digital</a>
+    Este proyecto forma parte de <a href="https://pergamino-digital-ciberseguridad.blogspot.com/?m=1" target="_blank" style="color: #fff; text-decoration: underline;">El Pergamino Digital</a>
   </footer>
 
-  <script src="script.js"></script>
+  <script>
+    // Navegación dinámica futura (placeholder)
+    console.log("Portada cargada correctamente – El Pergamino Digital");
+  </script>
 </body>
 </html>
