--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-color: #ffffff; /* Fondo blanco como en los labs */
+      background-color: #000000; /* Fondo negro */
       margin: 0;
       padding: 0;
-      color: #333;
+      color: #f0f0f0; /* Texto claro */
     }
     header {
-      background-color: #222;
+      background-color: #111;
       color: #fff;
       padding: 2rem 1rem;
       text-align: center;
@@ -33,25 +33,25 @@
       margin: auto;
     }
     section {
-      background-color: #fff;
+      background-color: #1a1a1a; /* Secciones oscuras */
       padding: 1.5rem;
       margin-bottom: 1.5rem;
       border-left: 5px solid #444;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 4px rgba(255,255,255,0.05);
     }
     section h2 {
       margin-top: 0;
-      color: #222;
+      color: #ffffff;
     }
     a {
-      color: #0066cc;
+      color: #66b2ff;
       text-decoration: none;
     }
     a:hover {
       text-decoration: underline;
     }
     footer {
-      background-color: #222;
+      background-color: #111;
       color: #ccc;
       text-align: center;
       padding: 1rem;
@@ -97,4 +97,4 @@
     console.log("Portada cargada correctamente – El Pergamino Digital");
   </script>
 </body>
-</html>
+</html>>
