--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <section>
       <h2>🧭 Proyecto y filosofía</h2>
-      <p><strong>El Pergamino Digital</strong> El Pergamino Digital es un ecosistema formativo modular, técnico y certificador, concebido con vocación pedagógica y espíritu colaborativo para contribuir al desarrollo de competencias en ciberseguridad. Su propósito no es imponer una verdad única, sino ofrecer una estructura abierta, rigurosa y en constante evolución, que pueda ser enriquecida con aportes, sugerencias y validaciones de la comunidad técnica. Cada entrega busca integrar criterios de dominio, validación cruzada y trazabilidad editorial, fomentando el aprendizaje crítico, la mejora continua y la construcción compartida del conocimiento.</p>
+      <p><strong>El Pergamino Digital</strong> es un ecosistema formativo modular, técnico y certificador, concebido con vocación pedagógica y espíritu colaborativo para contribuir al desarrollo de competencias en ciberseguridad. Reconociendo que la ciberseguridad es un campo dinámico y en constante evolución, este proyecto ofrece una estructura abierta, rigurosa y adaptable, que puede enriquecerse con aportes, sugerencias y validaciones de la comunidad técnica. Cada entrega busca integrar criterios de dominio, validación cruzada y trazabilidad editorial, fomentando el aprendizaje crítico, la mejora continua y la construcción compartida del conocimiento.</p>
     </section>
 
     <section>
