--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-color: #000000; /* Fondo negro */
+      background-color: #000000;
       margin: 0;
       padding: 0;
-      color: #f0f0f0; /* Texto claro */
+      color: #f0f0f0;
     }
     header {
       background-color: #111;
@@ -33,7 +33,7 @@
       margin: auto;
     }
     section {
-      background-color: #1a1a1a; /* Secciones oscuras */
+      background-color: #1a1a1a;
       padding: 1.5rem;
       margin-bottom: 1.5rem;
       border-left: 5px solid #444;
@@ -82,6 +82,12 @@
     </section>
 
     <section>
+      <h2>📚 Glosario técnico-aforístico</h2>
+      <p>Consulta definiciones clave, aforismos validados y analogías técnicas que enriquecen la comprensión de conceptos fundamentales en ciberseguridad.</p>
+      <p><a href="/el-pergamino-digital/glosario/index.html">Acceder al glosario</a></p>
+    </section>
+
+    <section>
       <h2>🔗 Repositorio oficial</h2>
       <p>Consulta el código fuente, estructura de carpetas y evolución del proyecto en GitHub:</p>
       <p><a href="https://github.com/JulioCesarAbreuP/el-pergamino-digital" target="_blank">Repositorio en GitHub</a></p>
@@ -97,4 +103,4 @@
     console.log("Portada cargada correctamente – El Pergamino Digital");
   </script>
 </body>
-</html>>
+</html>
