--- a/labs/labs26/index.html
+++ b/labs/labs26/index.html
@@ -1,1 +1,215 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Lab 26 – Integración de CMDB con GLPI, Snipe-IT y OCS Inventory</title>
+  <link rel="icon" href="/el-pergamino-digital/assets/favicon.png" type="image/png" />
+  <style>
+    :root { color-scheme: dark; }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #121212;
+      color: #e0e0e0;
+      margin: 0;
+      padding: 2em;
+      line-height: 1.6;
+    }
+    h1, h2 {
+      color: #90caf9;
+    }
+    code {
+      background-color: #1e1e1e;
+      padding: 0.2em 0.4em;
+      border-radius: 4px;
+      font-family: Consolas, monospace;
+    }
+    pre {
+      background-color: #1e1e1e;
+      padding: 1em;
+      border-radius: 6px;
+      overflow-x: auto;
+    }
+    a {
+      color: #90caf9;
+    }
+  </style>
+</head>
+<body>
 
+  <h1>Lab 26 – Integración de CMDB con GLPI, Snipe-IT y OCS Inventory</h1>
+  <h2>Automatización del inventario de activos mediante plataformas de gestión y descubrimiento</h2>
+
+  <section>
+    <h2>1. Objetivo</h2>
+    <p>Este laboratorio permite al analista técnico implementar una CMDB funcional mediante herramientas de código abierto (GLPI, Snipe-IT, OCS Inventory), integrando descubrimiento automático, clasificación de activos y sincronización con bases de datos. El objetivo es establecer una trazabilidad técnica y operativa de los activos de una organización.</p>
+  </section>
+
+  <section>
+    <h2>2. Nivel de dificultad</h2>
+    <p>Intermedio</p>
+  </section>
+
+  <section>
+    <h2>3. Herramientas utilizadas</h2>
+    <ul>
+      <li><code>GLPI</code> – Gestión de activos y CMDB</li>
+      <li><code>Snipe-IT</code> – Inventario de hardware/software</li>
+      <li><code>OCS Inventory NG</code> – Descubrimiento automático de activos</li>
+      <li><code>Apache / MySQL / PHP</code> – Infraestructura base</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>4. Entorno de laboratorio</h2>
+    <p>Máquina virtual con Ubuntu Server, instalación de LAMP stack, acceso a red local simulada con dispositivos virtuales, navegador web para acceder a interfaces de administración.</p>
+  </section>
+
+  <section>
+    <h2>5. Escenario</h2>
+    <p>Una organización necesita implementar una CMDB que permita registrar, clasificar y monitorear sus activos tecnológicos. El analista debe instalar y configurar GLPI, integrarlo con OCS Inventory para descubrimiento automático y evaluar la interoperabilidad con Snipe-IT como sistema alternativo o complementario.</p>
+  </section>
+
+  <section>
+    <h2>6. Pasos previos</h2>
+    <ul>
+      <li>Instalar Apache, MySQL y PHP en Ubuntu Server</li>
+      <li>Descargar e instalar GLPI y Snipe-IT desde sus repositorios oficiales</li>
+      <li>Instalar OCS Inventory Server y su agente en al menos una máquina cliente</li>
+      <li>Configurar acceso web a cada plataforma</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>7. Desarrollo</h2>
+    <ol>
+      <li>Configurar GLPI y crear perfiles de usuario, entidades y categorías de activos</li>
+      <li>Integrar GLPI con OCS Inventory para importar activos descubiertos automáticamente</li>
+      <li>Verificar sincronización de hardware, software y usuarios</li>
+      <li>Configurar Snipe-IT y registrar activos manualmente para comparar enfoques</li>
+      <li>Evaluar ventajas de cada plataforma en términos de trazabilidad, API y usabilidad</li>
+    </ol>
+  </section>
+
+    <section>
+    <h2>8. Resultados esperados</h2>
+    <ul>
+      <li>GLPI funcionando como CMDB centralizada</li>
+      <li>OCS Inventory detectando activos y enviando datos automáticamente</li>
+      <li>Activos importados correctamente en GLPI con atributos técnicos</li>
+      <li>Snipe-IT operativo como alternativa o complemento visual</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>9. Análisis de resultados</h2>
+    <p>La integración entre OCS y GLPI permite automatizar el descubrimiento de activos, reduciendo errores manuales y mejorando la trazabilidad. Snipe-IT ofrece una interfaz más ligera y orientada a la gestión visual. Comparar ambas soluciones permite elegir la más adecuada según el contexto organizacional.</p>
+  </section>
+
+  <section>
+    <h2>10. Conclusiones</h2>
+    <p>Una CMDB bien implementada es clave para la gestión de activos, auditorías y respuesta ante incidentes. La combinación de herramientas libres como GLPI, OCS y Snipe-IT permite construir una solución robusta, escalable y alineada con buenas prácticas internacionales.</p>
+  </section>
+
+  <section>
+    <h2>11. Medidas</h2>
+    <ul>
+      <li>Documentar la instalación y configuración de cada herramienta</li>
+      <li>Registrar capturas de activos detectados y sincronizados</li>
+      <li>Comparar campos importados vs campos manuales</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>12. Contramedidas</h2>
+    <ul>
+      <li>Restringir acceso administrativo a las plataformas</li>
+      <li>Habilitar autenticación fuerte en GLPI y Snipe-IT</li>
+      <li>Auditar los logs de acceso y cambios en la CMDB</li>
+      <li>Respaldar periódicamente las bases de datos</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>13. Riesgos y advertencias</h2>
+    <p>Una CMDB mal configurada puede exponer información sensible sobre la infraestructura. Las integraciones deben realizarse en entornos controlados y con credenciales seguras. No exponer interfaces de administración a internet sin protección.</p>
+  </section>
+
+  <section>
+    <h2>14. Evidencias</h2>
+    <p><em>Espacio reservado para capturas de pantalla de GLPI, OCS Inventory, Snipe-IT, registros de activos importados y configuración de sincronización.</em></p>
+  </section>
+
+  <section>
+    <h2>15. Validación cruzada</h2>
+    <ul>
+      <li><a href="https://www.cisecurity.org/controls/inventory-and-control-of-enterprise-assets" target="_blank">CIS Control 1 – Inventory and Control of Enterprise Assets</a></li>
+      <li><a href="https://www.iso.org/standard/54534.html" target="_blank">ISO/IEC 27001 A.8 – Asset Management</a></li>
+      <li><a href="https://csrc.nist.gov/publications/detail/sp/800-128/final" target="_blank">NIST SP 800-128 – Guide for Security-Focused Configuration Management</a></li>
+      <li><a href="https://www.itil.org/en/itil-4-practices/it-asset-management" target="_blank">ITIL 4 – IT Asset Management Practice</a></li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>16. Glosario asociado</h2>
+    <ul>
+      <li><strong>CMDB:</strong> Base de datos de gestión de configuración que almacena información sobre activos y sus relaciones</li>
+      <li><strong>GLPI:</strong> Herramienta de código abierto para gestión de activos, incidencias y CMDB</li>
+      <li><strong>OCS Inventory:</strong> Plataforma para descubrimiento automático de hardware y software</li>
+      <li><strong>Snipe-IT:</strong> Sistema de inventario de activos con enfoque visual y gestión de asignaciones</li>
+      <li><strong>Sincronización:</strong> Proceso de importar automáticamente datos desde una fuente externa</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>17. Preguntas de refuerzo</h2>
+    <ol>
+      <li>¿Qué ventajas ofrece una CMDB frente a un inventario manual?</li>
+      <li>¿Qué tipo de activos puede descubrir OCS Inventory?</li>
+      <li>¿Qué diferencias hay entre GLPI y Snipe-IT?</li>
+      <li>¿Qué riesgos implica una CMDB expuesta sin control de acceso?</li>
+      <li>¿Cómo se valida que la sincronización entre OCS y GLPI fue exitosa?</li>
+    </ol>
+  </section>
+
+    <section>
+    <h2>18. Rúbrica de evaluación</h2>
+    <ul>
+      <li>✔️ Instala y configura correctamente GLPI, Snipe-IT y OCS Inventory</li>
+      <li>✔️ Integra OCS con GLPI y verifica la importación de activos</li>
+      <li>✔️ Compara funcionalidades entre plataformas y documenta hallazgos</li>
+      <li>✔️ Aplica medidas de seguridad y control de acceso</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>19. Recursos complementarios</h2>
+    <ul>
+      <li><a href="https://glpi-project.org/" target="_blank">GLPI – Gestión de activos y CMDB</a></li>
+      <li><a href="https://snipeitapp.com/" target="_blank">Snipe-IT – Asset Management System</a></li>
+      <li><a href="https://ocsinventory-ng.org/" target="_blank">OCS Inventory NG – Discovery and Inventory</a></li>
+      <li><a href="https://www.itil.org/en/itil-4-practices/it-asset-management" target="_blank">ITIL 4 – IT Asset Management</a></li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>20. Créditos y licencia</h2>
+    <p>Este laboratorio forma parte del proyecto <a href="https://pergamino-digital-ciberseguridad.blogspot.com/?m=1" target="_blank">El Pergamino Digital</a>. Su uso está autorizado únicamente con fines educativos, respetando la trazabilidad editorial y la licencia CC BY-NC-SA 4.0.</p>
+  </section>
+
+  <section>
+    <h2>21. Nivel de certificación</h2>
+    <p>Intermedio – Alineado con ITIL Foundation, ISO/IEC 27001 y CIS Controls v8.</p>
+  </section>
+
+  <section>
+    <h2>22. Mapa de integración</h2>
+    <ul>
+      <li>🔗 Inicia el módulo de <strong>Gobierno de Activos y Control Operativo</strong></li>
+      <li>🧪 Refuerza el dominio de CMDB, descubrimiento automático y trazabilidad de activos</li>
+      <li>🎓 Integra conceptos clave del simulador certificador: <em>Asset Inventory</em>, <em>CMDB Integration</em>, <em>IT Asset Lifecycle</em></li>
+    </ul>
+  </section>
+
+</body>
+</html>
