--- a/labs/index.html
+++ b/labs/index.html
@@ -104,8 +104,8 @@
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs23/">Lab 23 – Bypass de WAF y evasión avanzada en aplicaciones web</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs24/">Lab 24 – Evasión de antivirus mediante ofuscación de payloads y técnicas de empaquetado</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs25/">Lab 25 – Evasión de EDR mediante técnicas de inyección y ejecución indirecta</a></li>
-        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs26/">Lab 06 – Análisis de metadatos en documentos y archivos</a></li>
-        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs27/">Lab 07 – Análisis de tráfico capturado (PCAP) y reconstrucción de sesiones</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs26/">Lab 26 – Integración de CMDB con GLPI, Snipe-IT y OCS Inventory</a></li>
+        <li><a class="lab-link" href="/el-pergamino-digital/labs/labs27/">Lab 27 – Etiquetado de criticidad y clasificación de riesgo en activos</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs28/">Lab 08 – Reconstrucción avanzada de sesiones y extracción de artefactos</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs29/">Lab 09 – Análisis de logs de eventos en sistemas Windows</a></li>
         <li><a class="lab-link" href="/el-pergamino-digital/labs/labs30/">Lab 10 – Análisis de logs de red y correlación de eventos</a></li>
