--- a/labs/labs21/index.html
+++ b/labs/labs21/index.html
@@ -27,13 +27,11 @@
   </ul>
 
   <h2>Arquitectura del entorno</h2>
-  <p>El entorno consta de tres nodos:</p>
   <ul>
     <li><strong>Atacante:</strong> Kali Linux – IP: 192.168.56.10</li>
     <li><strong>Firewall:</strong> pfSense – IP WAN: 192.168.56.1 / IP LAN: 10.0.0.1</li>
     <li><strong>Objetivo:</strong> Máquina vulnerable – IP: 10.0.0.5</li>
   </ul>
-  <p>La segmentación de red permite observar el comportamiento del firewall ante distintos tipos de tráfico.</p>
 
   <h2>Herramientas y entorno técnico</h2>
   <ul>
@@ -42,21 +40,22 @@
     <li><strong>Servicios:</strong> SSH, HTTP, FTP, configurados con reglas de firewall específicas.</li>
   </ul>
 
+
     <h2>Procedimiento técnico paso a paso</h2>
 
-  <h3>Fingerprinting con Nmap</h3>
+  <p><strong>Fingerprinting con Nmap:</strong></p>
   <pre><code>nmap -sS -p 22,80,443 10.0.0.5 -Pn -v</code></pre>
   <p>Se realiza un escaneo SYN para detectar puertos filtrados o abiertos. Se observa si hay respuestas RST o ausencia de respuesta (indicador de filtrado).</p>
 
-  <h3>Detección de filtrado con Firewalk</h3>
+  <p><strong>Detección de filtrado con Firewalk:</strong></p>
   <pre><code>firewalk -S 192.168.56.10 -D 10.0.0.5 -p 80 -r 1 -n</code></pre>
   <p>Se analiza si el firewall permite o bloquea paquetes con TTL manipulados. Firewalk infiere reglas de filtrado basándose en el TTL de respuesta.</p>
 
-  <h3>Simulación de evasión con Hping3</h3>
+  <p><strong>Simulación de evasión con Hping3:</strong></p>
   <pre><code>hping3 -S -p 80 -c 3 -flood -a 1.2.3.4 10.0.0.5</code></pre>
   <p>Se envían paquetes con spoofing de IP para evaluar si el firewall permite tráfico sin validación de origen.</p>
 
-  <h3>Captura de tráfico con Tcpdump</h3>
+  <p><strong>Captura de tráfico con Tcpdump:</strong></p>
   <pre><code>tcpdump -i eth0 host 10.0.0.5</code></pre>
   <p>Se monitorean respuestas del objetivo y comportamiento del firewall ante los paquetes enviados.</p>
 
